# TABGCppServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/enet/: CMakeLists.txt  enet.c  enet.h
libs/imgui-SFML/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Cars/: Car.cpp  Car.h  Cars.cpp  Cars.h
src/Game/: Chunk.cpp  Chunk.h  Chunks.cpp  Chunks.h  Constants.h  Game.cpp  Game.h  GamePhase.cpp  GamePhase.h  Loot.h  Ring.h
src/Game/Cars/: Car.cpp  Car.h  Cars.cpp  Cars.h  Part.h
src/Game/Groups/: Group.h  Groups.cpp  Groups.h
src/Game/Phases/: Countdown.cpp  Countdown.h  Ended.cpp  Ended.h  Flying.cpp  Flying.h  OpenDoors.cpp  OpenDoors.h  Started.cpp  Started.h  Waiting.cpp  Waiting.h
src/Game/Players/: Player.cpp  Player.h  Players.cpp  Players.h
src/Game/Weapons/: Weapon.cpp  Weapon.h  Weapons.cpp  Weapons.h
src/Groups/: Group.h  Groups.cpp  Groups.h
src/Helpers/: CharHelper.h  Config.cpp  Config.h  Counter.cpp  Counter.h  GeneralHelper.cpp  GeneralHelper.h  Logger.cpp  Logger.h  Preferences.cpp  Preferences.h  Quaternion.cpp  Quaternion.h  Timer.cpp  Timer.h  TypeTraits.h  Version.h  Version.h.in
src/Network/: Buffer.cpp  Buffer.h  Cleaner.cpp  Cleaner.h  Interface.cpp  Interface.h  Network.cpp  Network.h  NetworkTypes.h  Packet.cpp  Packet.h  PacketHandler.cpp  PacketHandler.h  Requests.cpp  Requests.h  Responses.cpp  Responses.h  VectorConverter.cpp  VectorConverter.h
src/Players/: Player.cpp  Player.h  Players.cpp  Players.h
src/Server/: Console.h  Enums.h  Game.cpp  Game.h  Preferences.cpp  Preferences.h  Server.cpp  Server.h  ServerPtr.cpp  ServerPtr.h  Types.h
src/UI/: Gui.cpp  Gui.h  Tui.cpp  Tui.h
src/Weapons/: Weapon.cpp  Weapon.h  Weapons.cpp  Weapons.h
tools/cmake/: SubDirList.cmake
